--- a/src/styles/promo.scss
+++ b/src/styles/promo.scss
@@ -13,6 +13,10 @@
         background: url('../images/promo/bg1.png') no-repeat top left;
         
     }
+    @media screen and (max-width: 820px){
+        padding: 200px 0px 0px 0px; 
+    }
+
     @media screen and (max-width: 414px){
         padding: 150px 0px 0px 0px; 
     }
