--- a/src/styles/discover.scss
+++ b/src/styles/discover.scss
@@ -34,7 +34,7 @@
                     display: flex;
                     justify-content: space-between;
                     align-items: flex-end;
-                    @media screen and (max-width: 820px){
+                    @media screen and (max-width: 1460px){
                         margin-top: 40px;
                     }
 
@@ -139,9 +139,14 @@
                         }
 
                         @media screen and (max-width: 992px){
-                           max-width: 30%;
-                           left: 65%;
+                           max-width: 45%;
+                           left: 55%;
                         }
+
+                        // @media screen and (max-width: 912px){
+                        //     max-width: 30%;
+                        //     left: 65%;
+                        //  }
 
                         
 
@@ -241,7 +246,7 @@
                                 margin: 29px 0px 0px 17.4px;
 
                                     @media screen and (max-width: 1150px){
-                                        font-size: calc($discoverButtonsGenreBuy * 2)
+                                        font-size: calc($discoverButtonsGenreBuy * 1.64)
                                     }
 
                                     @media screen and (max-width: 885px){
