--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,6 +1,11 @@
 .footer{
     padding: 96px 0px 73px 0px;
-    @media screen and (max-width: 820px) {
+    @media screen and (device-width: 820px) {
+        height: 80vh;
+        min-height: -webkit-fill-available;
+    }
+
+    @media screen and (device-width: 912px) {
         height: 80vh;
         min-height: -webkit-fill-available;
     }
