--- a/src/styles/discover.scss
+++ b/src/styles/discover.scss
@@ -139,14 +139,14 @@
                         }
 
                         @media screen and (max-width: 992px){
-                           max-width: 45%;
-                           left: 55%;
+                           max-width: 40%;
+                           left: 57%;
                         }
 
-                        // @media screen and (max-width: 912px){
-                        //     max-width: 30%;
-                        //     left: 65%;
-                        //  }
+                        @media screen and (max-width: 540px){
+                            max-width: 30%;
+                            left: 67%;
+                         }
 
                         
 
@@ -162,6 +162,7 @@
                             right: 0;
                             left: 5%;
                         }
+
 
                             &__item{
                                 line-height: 29px;
@@ -187,12 +188,10 @@
                             margin-top: 20px;
                         }
 
-                        @media screen and (max-width: 820px){
+                        @media screen and (max-width: 912px){
                             position: absolute;
                             top: 50%;
                         }
-
-                        
 
                             &__play{
                                 font-size: $discoverButtonsGenrePlay;
