--- a/src/styles/discover.scss
+++ b/src/styles/discover.scss
@@ -1,7 +1,11 @@
 .discover{
     padding: 151px 0px 110px 0px;
         @media screen and (max-width: 820px){
-            padding-bottom: 55px;
+            padding: 151px 0px 55px 0px;
+        }
+
+        @media screen and (max-width: 280px){
+            padding: 100px 0px 55px 0px;
         }
         &-container{
             display: flex;
@@ -125,6 +129,13 @@
                 @media screen and (max-width: 820px){
                     padding-bottom: 0;
                 }
+
+                @media screen and (max-width: 280px){
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    padding-bottom: 20px;
+                }
                     &__img-wrapper{
                         width: 100%;
                     }
@@ -146,7 +157,11 @@
                         @media screen and (max-width: 540px){
                             max-width: 30%;
                             left: 67%;
-                         }
+                        }
+
+                        @media screen and (max-width: 280px){
+                            left: 0;
+                        }
 
                         
 
@@ -163,6 +178,9 @@
                             left: 5%;
                         }
 
+                        @media screen and (max-width: 280px){
+                            position: static;
+                        }
 
                             &__item{
                                 line-height: 29px;
@@ -191,6 +209,14 @@
                         @media screen and (max-width: 912px){
                             position: absolute;
                             top: 50%;
+                        }
+
+                        @media screen and (max-width: 280px){
+                            position: static;
+                            display: flex;
+                            flex-direction: column;
+                            align-content: flex-start;
+                            margin: 20px 0 0 0;
                         }
 
                             &__play{
@@ -229,6 +255,10 @@
                                             left: 80%;
                                             
                                         }
+
+                                        @media screen and (max-width: 280px){
+                                            left: 70%;
+                                        }
                                         
                                     }
                             }
@@ -255,6 +285,11 @@
                                     @media screen and (max-width: 730px){
                                         font-size: calc($discoverButtonsGenreBuy / 1.1)  
                                     }
+
+                                    @media screen and (max-width: 280px){
+                                        margin: 10px 0 0 0;
+                                    }
+
                             }
                     }
             }
