--- a/src/styles/discover.scss
+++ b/src/styles/discover.scss
@@ -109,6 +109,7 @@
            min-height: 429px;
                 @media screen and (max-width: 1460px) {
                     grid-template-columns: repeat(2, minmax(100px, 0.4fr));
+                    grid-column-gap: 10%;
                     justify-content: center;
                 }
 
@@ -126,7 +127,7 @@
                 border: 1px solid $discoverCardBorderColor;
                 padding-bottom: 33px;
                 position: relative;
-                @media screen and (max-width: 820px){
+                @media screen and (device-width: 820px){
                     padding-bottom: 0;
                 }
 
@@ -153,8 +154,8 @@
                         }
 
                         @media screen and (max-width: 992px){
-                           max-width: 40%;
-                           left: 57%;
+                           max-width: 30%;
+                           left: 65%;
                         }
                         @media screen and (max-width: 412px){
                             top: -30%;
@@ -165,6 +166,7 @@
                         }
 
                         @media screen and (max-width: 280px){
+                            top: -15%;
                             left: 0;
                         }
 
@@ -209,12 +211,10 @@
                         flex-wrap: wrap;
                         @media screen and (max-width: 1150px){
                             margin-top: 20px;
-                        }
-
-                        @media screen and (max-width: 912px){
                             position: absolute;
                             top: 50%;
                         }
+
 
                         @media screen and (max-width: 280px){
                             position: static;
